--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/Index.cshtml
@@ -45,7 +45,7 @@
                 <div class="icon">
                     <i class="fa fa-calendar"></i>
                 </div>
-                <a href="@Url.Action("Index","Session" , new { id = eventId})" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="@Url.Action("Index","Session" , new { briefName = briefName })" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
         <div class="col-lg-3 col-xs-6">
@@ -58,7 +58,7 @@
                 <div class="icon">
                     <i class="fa fa-question-circle"></i>
                 </div>
-                <a href="@Url.Action("Index","QA", new { id = eventId})" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="@Url.Action("Index","QA", new { briefName = briefName })" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
         <div class="col-lg-3 col-xs-6">
@@ -71,7 +71,7 @@
                 <div class="icon">
                     <i class="fa fa-check-circle-o"></i>
                 </div>
-                <a href="@Url.Action("Index","Voting", new { id = eventId})" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="@Url.Action("Index","Voting", new { briefName = briefName })" class="small-box-footer">Nhấn để vào cấu hình <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
 
@@ -276,15 +276,12 @@
         var eventId = @(eventId);
 
         $(document).ready(function () {
-            loadCollectionTypeToCb();
+            //loadCollectionTypeToCb();
 
             $('.menu').removeClass('menu-active');
             $('.menu-event').addClass('menu-active');
 
-            //$('#ckActive').bootstrapToggle({
-            //    on: 'Hiện',
-            //    off: 'Ẩn'
-            //});
+            loadCollectionTypeToCb();
         });
 
 
@@ -514,7 +511,6 @@
                             $('#cbCollectionType').append('<option value="' + data.data[i].CollectionTypeID + '">' + data.data[i].Name +'</option>');
                         }
                         $('#cbCollectionType').append('<option value="-1">Khác</option>');
-                        //disableOptionCollectionType();
                     }
                 },
                 error: function (data) {
