--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageSession/Index.cshtml
@@ -10,8 +10,8 @@
     }
     IEnumerable<QAViewModel> listQa = ViewBag.ListQA;
     IEnumerable<VotingViewModel> listVoting = ViewBag.ListVoting;
-    string startDate = ViewBag.StartDate != null ? ViewBag.StartDate : DateTime.Today.ToString("dd/MM/yyyy HH:mm");
-    string endDate = ViewBag.EndDate != null ? ViewBag.EndDate : DateTime.Today.ToString("dd/MM/yyyy HH:mm");
+    /*string startDate = ViewBag.StartDate != null ? ViewBag.StartDate : DateTime.Today.ToString("dd/MM/yyyy HH:mm");
+    string endDate = ViewBag.EndDate != null ? ViewBag.EndDate : DateTime.Today.ToString("dd/MM/yyyy HH:mm");*/
 }
 @using HmsService.ViewModels;
 @model IEnumerable<SessionViewModel>
@@ -22,7 +22,7 @@
                 <h2 class="col-sm-12 col-lg-12">Trung tâm điểu khiển phiên làm việc</h2>
                 <div class="col-lg-4">
                     <select class="form-control" id="cb-session-id">
-                        <option value="0">Vui lòng chọn phiên làm việc muốn điều khiển</option>
+                        @*<option value="0">Vui lòng chọn phiên làm việc muốn điều khiển</option>*@
                         @foreach (var session in Model)
                         {
                             <option value="@(session.SessionID)">@(session.Name)</option>
@@ -530,6 +530,8 @@
     </select>
 </div>
 
+<input type="hidden" id="activityStartTime" value=""/>
+<input type="hidden" id="activityEndTime" value="" />
 
 @section scripts {
     <script>
@@ -543,17 +545,16 @@
                 InitInteractionDatatable(initSessionId);
             }
 
-            $('#AddStartEndTime').daterangepicker({
+            setDateRangeActivity(initSessionId);
+            /*$('#AddStartEndTime').daterangepicker({
                 locale: {
                     format: 'DD/MM/YYYY HH:mm'
                 },
-                @*startDate: '@(startDate)',
-                endDate: '@(endDate)',*@
-                minDate: '@(startDate)',
-                maxDate: '@(endDate)',
+                minDate: '(startDate)',
+                maxDate: '(endDate)',
                 timePicker: true,
                 timePicker24Hour: true
-            });
+            });*/
 
             /*Xóa báo lỗi error ở modal add interaction*/
             clearErrorAddInteraction();
@@ -572,11 +573,9 @@
             $('#startEndTime').daterangepicker({
                 locale: {
                     format: 'DD/MM/YYYY HH:mm'
-                }, 
-                @*startDate: '@(startDate)',
-                endDate: '@(endDate)',*@
-                minDate: '@(startDate)',
-                maxDate: '@(endDate)',
+                },
+                minDate: $('#activityStartTime').val(),
+                maxDate: $('#activityEndTime').val() + '23:59',
                 timePicker: true,
                 timePicker24Hour: true
             });
