--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
                 <ul class="sidebar-menu" data-widget="tree">
                     @if (User.IsInRole("SystemAdmin"))
                     {
-                        <li><a href="@Url.Action("Index","SystemAdmin")"><i class="fa fa-setting"></i> <span>Quản lý tài khoản</span></a></li>
+                        <li><a href="@Url.Action("Index","SystemAdmin")"><i class="fa fa-cog"></i> <span>Quản lý tài khoản</span></a></li>
                         <li><a href="@Url.Action("LogOff","Account")"><i class="fa fa-sign-out"></i> <span>Thoát</span></a></li>
                     }
                     else
