--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Home/Index.cshtml
@@ -322,10 +322,17 @@
             <div class="container-fluid">
                 <div class="google-map-area">
                     @*<div id="googleMap" style="width:100%; height:496px;">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4667109038546!2d106.69877591480079!3d10.775521892322164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f479e4f95db%3A0xcae127d5b519b548!2sRex+Hotel!5e0!3m2!1sen!2s!4v1527840226572" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4667109038546!2d106.69877591480079!3d10.775521892322164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f479e4f95db%3A0xcae127d5b519b548!2sRex+Hotel!5e0!3m2!1sen!2s!4v1527840226572" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
-                        </div>*@
+        </div>*@
+                    <div class="upcoming-event-layout1">
+                        <h2>
+                            Địa điểm
+                        </h2>
+                        <div class="date">@(time)</div>
+                        <p><b>@Html.Raw(Model.Address)</b></p>
+                    </div>
                     <div id="map" style="width:100%; height:496px;">
 
                     </div>
@@ -390,6 +397,7 @@
     <script>
         $(document).ready(function () {
             var startTime = '@(Model.StartTime)';
+            console.log(startTime);
             /*-------------------------------------
             Countdown activation code
         -------------------------------------*/
