--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/login.css
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/login.css
@@ -46,7 +46,7 @@ body {
 .wrapper {
     position: absolute;
     background: #50a3a2;
-    background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+    
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -65,7 +65,7 @@ body {
     padding: 80px 0;
     /*height: 400px;*/
     text-align: center;
-    border: 2px solid #005d51;
+    background-color: #167473;
 }
 
     .container h1 {
@@ -107,7 +107,7 @@ form {
         form .form-input:focus {
             background-color: white;
             width: 300px;
-            color: #53e3a6;
+            color: #50a3a2;
         }
 
     form .button {
@@ -118,7 +118,7 @@ form {
         background-color: white;
         border: 0;
         padding: 10px 15px;
-        color: #53e3a6;
+        color: #50a3a2;
         border-radius: 3px;
         width: 250px;
         cursor: pointer;
@@ -253,4 +253,7 @@ form {
         -webkit-transform: translateY(-700px) rotate(600deg);
         transform: translateY(-700px) rotate(600deg);
     }
+}
+.validation-summary-errors text-danger {
+    color:red;
 }
